--- a/registro.html
+++ b/registro.html
@@ -22,6 +22,16 @@
             <label for="confirm-password">Confirmar contraseña:</label>
             <input type="password" id="confirm-password" name="confirm-password" required>
 
+            <!-- Selección de rol con diseño mejorado -->
+            <label>Selecciona tu rol:</label>
+            <div class="role-selection">
+                <input type="radio" id="estudiante" name="role" value="estudiante" required>
+                <label for="estudiante" class="role-option">Estudiante</label>
+
+                <input type="radio" id="maestro" name="role" value="maestro" required>
+                <label for="maestro" class="role-option">Maestro</label>
+            </div>
+
             <button type="submit">Crear Cuenta</button>
         </form>
         <p>¿Ya tienes cuenta? <a href="index.html">Inicia sesión aquí</a></p>
